--- a/src/pages/About/AboutHope/abouthope.css
+++ b/src/pages/About/AboutHope/abouthope.css
@@ -13,8 +13,10 @@ html, body {
     position: relative;
     top: 0;
     left: 0;
+    padding: 0;
+    margin: 0;
     width: auto;
-    height: 1400px;
+    height: 1500px;
     background: linear-gradient(135deg, #a8d0e6, #c1e7f1); /* Soft pastel gradient */
     padding: 150px 20px;
     z-index: 10;
