--- a/src/pages/About/AboutWomenWings/aboutwomenwings.css
+++ b/src/pages/About/AboutWomenWings/aboutwomenwings.css
@@ -14,7 +14,9 @@ html, body {
     top: 0;
     left: 0;
     width: auto;
-    height: 1400px;
+    margin: 0;
+    padding: 0;
+    height: 1500px;
     background: linear-gradient(135deg, #a8d0e6, #c1e7f1); /* Soft pastel gradient */
     padding: 150px 20px;
     z-index: 10;
