--- a/src/pages/Events/Upcomming/upcomming.css
+++ b/src/pages/Events/Upcomming/upcomming.css
@@ -51,8 +51,8 @@
 }
 
 .event-item:hover {
-  background-color: #3498db;
-  color: white;
+  background-color: #AFDBF5;
+  color: #2c3e50;
   transform: scale(1.05);
   box-shadow: 0 4px 12px rgba(0, 0, 0, 0.15);
 }
@@ -112,7 +112,7 @@
 }
 
 .event-day:hover {
-  background-color: #3498db;
+  /* background-color: #3498db; */
   color: white;
   transform: scale(1.05);
 }
