--- a/src/pages/Teams/WomenWings/womenwings.css
+++ b/src/pages/Teams/WomenWings/womenwings.css
@@ -14,6 +14,7 @@
   font-weight: bold;
   text-transform: uppercase;
   margin-bottom: 40px;
+  margin-top: 100px;
   position: relative;
   animation: fadeIn 2s ease-in-out;
 }
