--- a/src/pages/Contact/contact.css
+++ b/src/pages/Contact/contact.css
@@ -7,6 +7,16 @@
   /* box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2); */
 }
 
+.logo-container {
+  text-align: center;
+  margin-bottom: 40px;
+  
+}
+
+.logo {
+  max-width: 200px;
+  height: auto;
+}
 .contact-container {
   padding: 50px 20px;
   max-width: 900px;
