--- a/src/pages/About/AboutWomenWings/aboutwomenwings.css
+++ b/src/pages/About/AboutWomenWings/aboutwomenwings.css
@@ -16,7 +16,7 @@ html, body {
     width: auto;
     margin: 0;
     padding: 0;
-    height: 1500px;
+    height: 1400px;
     background: linear-gradient(135deg, #a8d0e6, #c1e7f1); /* Soft pastel gradient */
     padding: 150px 20px;
     z-index: 10;
@@ -27,7 +27,7 @@ html, body {
     padding-top: 120px;
     max-width: 1200px;
     margin: auto;
-    height: 1400px;
+    /* height: 1400px; */
     background: linear-gradient(135deg, #a8d0e6, #c1e7f1); /* Soft pastel gradient */
 }
 
