--- a/src/pages/About/AboutWomenWings/aboutwomenwings.css
+++ b/src/pages/About/AboutWomenWings/aboutwomenwings.css
@@ -13,13 +13,19 @@ html, body {
     position: relative;
     top: 0;
     left: 0;
-    width: auto;
-    margin: 0;
     padding: 0;
+    margin: 0;
+    width: auto;
     height: 1400px;
     background: linear-gradient(135deg, #a8d0e6, #c1e7f1); /* Soft pastel gradient */
     padding: 150px 20px;
     z-index: 10;
+
+    padding: 50px 20px;
+    /* background: linear-gradient(135deg, #a6f1a6, #2c3e50); */
+    text-align: center;
+    min-height: 100vh;
+    margin-top: 100px;
 }
 
 /* Section Container */
