--- a/src/pages/Events/Past/past.css
+++ b/src/pages/Events/Past/past.css
@@ -7,6 +7,12 @@
   background-color: #f9f9f9;
   border-radius: 15px;
   box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+  padding: 50px 20px;
+    /* background: linear-gradient(135deg, #a6f1a6, #2c3e50); */
+    text-align: center;
+    min-height: 100vh;
+    margin-top: 100px;
+    /* box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2); */
 }
 
 /* Title for Past Events Section */
