--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -8,8 +8,23 @@
     width: 300px;
     margin: 20px;
     display: inline-block;
+    
   }
-  
+  project{
+    padding-top: 120px;
+  max-width: 1200px;
+  margin:auto;
+  height: 1400px;
+  background-color: #f9f9f9;
+  border-radius: 15px;
+  box-shadow: 0 6px 18px rgba(0, 0, 0, 0.1);
+  padding: 50px 20px;
+    /* background: linear-gradient(135deg, #a6f1a6, #2c3e50); */
+    text-align: center;
+    min-height: 100vh;
+    margin-top: 100px;
+    /* box-shadow: 0 8px 20px rgba(0, 0, 0, 0.2); */
+  }
   .project-card:hover {
     transform: translateY(-10px);
     box-shadow: 0 10px 20px rgba(0, 0, 0, 0.2);
@@ -19,7 +34,7 @@
   .project-image {
     width: 100%;
     height: 200px;
-    object-fit: cover;
+    object-fit: fill;
     border-bottom: 2px solid #f0f0f0;
   }
   
