--- a/src/pages/Projects/projects.css
+++ b/src/pages/Projects/projects.css
@@ -10,7 +10,7 @@
     display: inline-block;
     
   }
-  project{
+project{
     padding-top: 120px;
   max-width: 1200px;
   margin:auto;
@@ -43,9 +43,10 @@
     padding: 20px;
   }
   
-  .project-title {
+  .projects-title {
     font-size: 1.5rem;
     color: #2C2C54;
+    margin-top: 120px;
     margin-bottom: 15px;
   }
   
