--- a/src/pages/Home/home.css
+++ b/src/pages/Home/home.css
@@ -30,7 +30,7 @@
   padding: 1.25rem 2.5rem;
   border-radius: 0.75rem;
   font-size: 1.25rem;
-  /* display: grid; */
+  display: inline;
   transition: background-color 0.3s ease, transform 0.3s ease;
 }
 
