--- a/src/pages/About/AboutHope/abouthope.css
+++ b/src/pages/About/AboutHope/abouthope.css
@@ -16,8 +16,8 @@ html, body {
     padding: 0;
     margin: 0;
     width: auto;
-    height: 1400px;
-    background: linear-gradient(135deg, #a8d0e6, #c1e7f1); /* Soft pastel gradient */
+    height: auto;
+    /* background: linear-gradient(135deg, #a8d0e6, #c1e7f1);  */
     padding: 150px 20px;
     z-index: 10;
 
@@ -34,8 +34,8 @@ html, body {
     padding-top: 120px;
     max-width: 1200px;
     margin:auto;
-    height: 13++00px;
-    background: linear-gradient(135deg, #a8d0e6, #c1e7f1); /* Soft pastel gradient */
+    height: 1300px;
+    /* background: linear-gradient(135deg, #a8d0e6, #c1e7f1); */
 }
 
 /* Header Section */
