--- a/src/components/Navbar/navbar.css
+++ b/src/components/Navbar/navbar.css
@@ -97,7 +97,7 @@
 
   .navbar-mobile-icon {
     display: block;
-    position: ;
+    /* position: ; */
     top: 20px;
     right: 10px;
     /* left: ; */
