--- a/src/App.css
+++ b/src/App.css
@@ -110,7 +110,7 @@ label {
 
 /* Footer */
 footer {
-  background: #333;
+  /* background: #333; */
   color: #fff;
   text-align: center;
   padding: 1rem 0;
